@@ -2,6 +2,7 @@ package xerca.xercamusic.common.item;
 
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.MinecraftServer;
@@ -16,13 +17,12 @@ import net.minecraft.world.item.context.UseOnContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
 import org.jetbrains.annotations.NotNull;
-import xerca.xercamusic.client.ClientStuff;
+import xerca.xercamusic.client.ModClient;
 import xerca.xercamusic.common.MusicManager;
 import xerca.xercamusic.common.NoteEvent;
 import xerca.xercamusic.common.block.BlockMusicBox;
 import xerca.xercamusic.common.block.Blocks;
 
-import javax.annotation.Nonnull;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -84,7 +84,7 @@ public class ItemMusicSheet extends Item {
         byte[] music = nbt.getByteArray(KEY_MUSIC_OLD);
 
         int safePause = Math.max(1, pause);
-        byte bps = (byte) Math.min(50, Math.max(1, Math.round(20.f / safePause)));
+        byte bps = (byte) Math.clamp(Math.round(20.f / safePause), 1, 50);
         List<NoteEvent> notes = oldMusicToNotes(music);
 
         nbt.putInt(KEY_LENGTH, length + ADD_TO_OLD_END);
@@ -115,11 +115,11 @@ public class ItemMusicSheet extends Item {
         return notes;
     }
 
-    public static byte getBPS(@Nonnull ItemStack stack) {
+    public static byte getBPS(ItemStack stack) {
         return stack.getOrDefault(Items.SHEET_BPS, (byte) 0);
     }
 
-    public static int getPrevInstrument(@Nonnull ItemStack stack) {
+    public static int getPrevInstrument(ItemStack stack) {
         Byte prevIns = stack.get(Items.SHEET_PREV_INSTRUMENT);
         if (prevIns != null) {
             return prevIns;
@@ -127,27 +127,25 @@ public class ItemMusicSheet extends Item {
         return -1;
     }
 
-    public static float getVolume(@Nonnull ItemStack stack) {
+    public static float getVolume(ItemStack stack) {
         return stack.getOrDefault(Items.SHEET_VOLUME, 1.f);
     }
 
-    public static boolean isEmptySheet(@Nonnull ItemStack stack) {
+    public static boolean isEmptySheet(ItemStack stack) {
         return stack.get(Items.SHEET_GENERATION) == null && stack.get(Items.SHEET_ID) == null && stack.get(Items.SHEET_VERSION) == null;
     }
 
-    @Nonnull
     @Override
-    public InteractionResultHolder<ItemStack> use(Level worldIn, Player playerIn, @Nonnull InteractionHand hand) {
+    public InteractionResultHolder<ItemStack> use(Level worldIn, Player playerIn, InteractionHand hand) {
         final ItemStack heldItem = playerIn.getItemInHand(hand);
         if (worldIn.isClientSide) {
-            onlyRunOnClient(() -> ClientStuff::showMusicGui);
+            onlyRunOnClient(() -> ModClient::showMusicGui);
         }
         return new InteractionResultHolder<>(InteractionResult.SUCCESS, heldItem);
     }
 
-    @Nonnull
     @Override
-    public Component getName(@Nonnull ItemStack stack) {
+    public Component getName(ItemStack stack) {
         String title = stack.get(Items.SHEET_TITLE);
         if (title != null) {
             return Component.literal(title);
@@ -159,7 +157,7 @@ public class ItemMusicSheet extends Item {
      * allows items to add custom lines of information to the mouseover description
      */
     @Override
-    public void appendHoverText(@NotNull ItemStack stack, Item.@NotNull TooltipContext context, @NotNull List<Component> tooltip, @NotNull TooltipFlag tooltipFlag) {
+    public void appendHoverText(ItemStack stack, Item.@NotNull TooltipContext context, List<Component> tooltip, TooltipFlag tooltipFlag) {
         String s = stack.get(Items.SHEET_AUTHOR);
 
         if (s != null) {
@@ -167,7 +165,7 @@ public class ItemMusicSheet extends Item {
         }
 
         int generation = stack.getOrDefault(Items.SHEET_GENERATION, 0);
-        // generation = 0 means empty, 1 means original, more means copy
+        // generation = 0=empty, 1=original, 2=copy of org, 3=copy of copy
         if (generation > 0) {
             tooltip.add(Component.translatable("note.generation." + (generation - 1))
                     .withStyle(generation == 1 ? ChatFormatting.GOLD : ChatFormatting.GRAY));
@@ -188,16 +186,17 @@ public class ItemMusicSheet extends Item {
         }
     }
 
-    @Nonnull
     @Override
     public InteractionResult useOn(UseOnContext context) {
         Level world = context.getLevel();
         BlockPos blockpos = context.getClickedPos();
         BlockState blockState = world.getBlockState(blockpos);
-        if (blockState.getBlock() == Blocks.MUSIC_BOX && !blockState.getValue(BlockMusicBox.HAS_MUSIC)) {
+        if (blockState.getBlock() == Blocks.MUSIC_BOX &&
+                blockState.hasProperty(BlockMusicBox.HAS_MUSIC) &&
+                !blockState.getValue(BlockMusicBox.HAS_MUSIC)) {
             ItemStack itemstack = context.getItemInHand();
             if (!world.isClientSide && itemstack.get(Items.SHEET_ID) != null) {
-                BlockMusicBox.insertMusic(world, blockpos, blockState, itemstack.copy());
+                BlockMusicBox.insertMusic(world, blockpos, blockState, itemstack.copyWithCount(1));
                 Player player = context.getPlayer();
                 if (player != null && !player.getAbilities().instabuild) {
                     itemstack.shrink(1);
@@ -213,5 +212,23 @@ public class ItemMusicSheet extends Item {
     @Override
     public boolean isFoil(ItemStack stack) {
         return stack.getOrDefault(Items.SHEET_GENERATION, 0) > 0;
+    }
+
+    public static final int SIGNED_STACK_SIZE = 16;
+
+    /**
+     * Signed sheets that are the same can be stacked
+     */
+    public static void updateStackSize(ItemStack stack) {
+        if (stack.getOrDefault(Items.SHEET_GENERATION, 0) > 0) {
+            stack.set(DataComponents.MAX_STACK_SIZE, SIGNED_STACK_SIZE);
+        } else if (stack.getOrDefault(DataComponents.MAX_STACK_SIZE, 1) > 1) {
+            stack.remove(DataComponents.MAX_STACK_SIZE);
+        }
+    }
+
+    @Override
+    public void verifyComponentsAfterLoad(ItemStack stack) {
+        updateStackSize(stack);
     }
 }
