@@ -3,6 +3,7 @@ package xerca.xercapaint.tests;
 import net.minecraft.commands.arguments.EntityAnchorArgument;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.gametest.framework.GameTest;
 import net.minecraft.gametest.framework.GameTestHelper;
 import net.minecraft.nbt.CompoundTag;
@@ -16,6 +17,8 @@ import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.component.CustomData;
+import net.minecraft.world.level.GameType;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
@@ -25,8 +28,11 @@ import xerca.xercapaint.item.Items;
 
 import java.lang.reflect.Field;
 import java.util.List;
+import java.util.Objects;
 
+@SuppressWarnings("PMD.AvoidAccessibilityAlteration")
 public class EaselTests {
+    private static final String BASIC_TEMPLATE = "xercapaint:basic_test";
     private static final Field PAINTER_FIELD;
     private static final Field DROP_DEFERRED_FIELD;
 
@@ -45,7 +51,7 @@ public class EaselTests {
         AABB searchBox = new AABB(helper.absolutePos(relativePos)).inflate(1.5D, 2.0D, 1.5D);
         List<? extends Entity> list = helper.getLevel().getEntities(Entities.EASEL, searchBox, Entity::isAlive);
         helper.assertTrue(!list.isEmpty(), failureMessage);
-        return (EntityEasel) list.get(0);
+        return (EntityEasel) list.getFirst();
     }
 
     private static long countItemDropsNear(GameTestHelper helper, BlockPos relativePos, Item item) {
@@ -58,7 +64,7 @@ public class EaselTests {
             return (Player) PAINTER_FIELD.get(easel);
         } catch (IllegalAccessException e) {
             helper.assertTrue(false, "Failed to read easel painter field: " + e);
-            return null;
+            throw new IllegalStateException("Unreachable after GameTest assertion failure", e);
         }
     }
 
@@ -67,14 +73,14 @@ public class EaselTests {
             return (Runnable) DROP_DEFERRED_FIELD.get(easel);
         } catch (IllegalAccessException e) {
             helper.assertTrue(false, "Failed to read easel deferred-drop field: " + e);
-            return null;
+            throw new IllegalStateException("Unreachable after GameTest assertion failure", e);
         }
     }
 
-    @GameTest(template = "xercapaint:basic_test")
+    @GameTest(template = BASIC_TEMPLATE)
     public static void placingEaselFacesPlayerFromAllEightDirections(GameTestHelper helper) {
         final BlockPos easelLand = new BlockPos(3, 1, 2);
-        Player player = helper.makeMockSurvivalPlayer();
+        Player player = helper.makeMockPlayer(GameType.SURVIVAL);
         BlockPos absEaselLand = helper.absolutePos(easelLand);
         Vec3 target = Vec3.atCenterOf(absEaselLand);
         helper.setBlock(easelLand, Blocks.STONE);
@@ -110,10 +116,10 @@ public class EaselTests {
         helper.succeed();
     }
 
-    @GameTest(template = "xercapaint:basic_test")
+    @GameTest(template = BASIC_TEMPLATE)
     public static void rightClickWithCanvasEmptyHandAndPaletteHasExpectedModes(GameTestHelper helper) {
         final BlockPos easelLand = new BlockPos(3, 1, 2);
-        Player player = helper.makeMockSurvivalPlayer();
+        Player player = helper.makeMockPlayer(GameType.SURVIVAL);
         BlockPos absEaselLand = helper.absolutePos(easelLand);
 
         helper.setBlock(easelLand, Blocks.STONE);
@@ -138,19 +144,19 @@ public class EaselTests {
         player.setItemSlot(EquipmentSlot.MAINHAND, new ItemStack(Items.ITEM_PALETTE, 1));
         InteractionResult editResult = player.interactOn(easel, InteractionHand.MAIN_HAND);
         helper.assertTrue(editResult.consumesAction(), "Expected palette interaction to consume interaction");
-        helper.assertTrue(getPainter(helper, easel) == player, "Expected palette interaction to acquire easel editor lock");
+        helper.assertTrue(Objects.equals(getPainter(helper, easel), player), "Expected palette interaction to acquire easel editor lock");
 
         helper.succeed();
     }
 
-    @GameTest(template = "xercapaint:basic_test")
+    @GameTest(template = BASIC_TEMPLATE)
     public static void secondPlayerCannotStealEditLockAndCanBreakAndDropBothItems(GameTestHelper helper) {
         final BlockPos easelLand = new BlockPos(3, 1, 2);
         BlockPos absEaselLand = helper.absolutePos(easelLand);
         Vec3 target = Vec3.atCenterOf(absEaselLand);
 
-        Player firstPlayer = helper.makeMockSurvivalPlayer();
-        Player secondPlayer = helper.makeMockSurvivalPlayer();
+        Player firstPlayer = helper.makeMockPlayer(GameType.SURVIVAL);
+        Player secondPlayer = helper.makeMockPlayer(GameType.SURVIVAL);
 
         helper.setBlock(easelLand, Blocks.STONE);
 
@@ -166,13 +172,13 @@ public class EaselTests {
 
         firstPlayer.setItemSlot(EquipmentSlot.MAINHAND, new ItemStack(Items.ITEM_PALETTE, 1));
         firstPlayer.interactOn(easel, InteractionHand.MAIN_HAND);
-        helper.assertTrue(getPainter(helper, easel) == firstPlayer, "First player should hold the edit lock");
+        helper.assertTrue(Objects.equals(getPainter(helper, easel), firstPlayer), "First player should hold the edit lock");
 
         secondPlayer.moveTo(target.x - 1.0D, absEaselLand.getY(), target.z, 0.0F, 0.0F);
         secondPlayer.lookAt(EntityAnchorArgument.Anchor.EYES, target);
         secondPlayer.setItemSlot(EquipmentSlot.MAINHAND, new ItemStack(Items.ITEM_PALETTE, 1));
         secondPlayer.interactOn(easel, InteractionHand.MAIN_HAND);
-        helper.assertTrue(getPainter(helper, easel) == firstPlayer, "Second player should not replace first player as editor");
+        helper.assertTrue(Objects.equals(getPainter(helper, easel), firstPlayer), "Second player should not replace first player as editor");
 
         DamageSource secondAttack = helper.getLevel().damageSources().playerAttack(secondPlayer);
         easel.hurt(secondAttack, 1.0F);
@@ -194,10 +200,10 @@ public class EaselTests {
         helper.succeed();
     }
 
-    @GameTest(template = "xercapaint:basic_test")
+    @GameTest(template = BASIC_TEMPLATE)
     public static void easelCanBeBrokenByExplosion(GameTestHelper helper) {
         final BlockPos easelLand = new BlockPos(3, 1, 2);
-        Player player = helper.makeMockSurvivalPlayer();
+        Player player = helper.makeMockPlayer(GameType.SURVIVAL);
         BlockPos absEaselLand = helper.absolutePos(easelLand);
 
         helper.setBlock(easelLand, Blocks.STONE);
@@ -224,10 +230,10 @@ public class EaselTests {
         helper.succeed();
     }
 
-    @GameTest(template = "xercapaint:basic_test")
+    @GameTest(template = BASIC_TEMPLATE)
     public static void invulnerableTaggedEaselIgnoresPlayerAndExplosionDamage(GameTestHelper helper) {
         final BlockPos easelLand = new BlockPos(3, 1, 2);
-        Player player = helper.makeMockSurvivalPlayer();
+        Player player = helper.makeMockPlayer(GameType.SURVIVAL);
         BlockPos absEaselLand = helper.absolutePos(easelLand);
 
         helper.setBlock(easelLand, Blocks.STONE);
@@ -235,11 +241,9 @@ public class EaselTests {
         player.lookAt(EntityAnchorArgument.Anchor.EYES, Vec3.atCenterOf(absEaselLand));
 
         ItemStack invulnerableEaselStack = new ItemStack(Items.ITEM_EASEL, 1);
-        CompoundTag rootTag = invulnerableEaselStack.getOrCreateTag();
-        rootTag.putBoolean("Invulnerable", true);
         CompoundTag entityTag = new CompoundTag();
         entityTag.putBoolean("Invulnerable", true);
-        rootTag.put("EntityTag", entityTag);
+        invulnerableEaselStack.set(DataComponents.ENTITY_DATA, CustomData.of(entityTag));
         player.setItemSlot(EquipmentSlot.MAINHAND, invulnerableEaselStack);
 
         helper.placeAt(player, player.getMainHandItem(), easelLand, Direction.UP);
